# tsk_fuzzy_network_cpp

./: .gitignore  build.sh  build_test.sh  build_tsk.sh  convert_csv_to_same_format  convert_csv_to_same_format.cpp  main  main.cpp  test_diabet.json  test_diabet2.json  test_diabet3.json  test_irises.json  test_irises2.json  test_irises3.json  test_performance.json
app/untitled/: CMakeLists.txt  datasetmodel.cpp  datasetmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  state.cpp  state.h  untitled.pro
include/: api.h  dataset.h  fuzzy_api.h  logger.h  metric.h  out.h
include/tsk_fuzzy_network/: c_means.h  cuda_learning_algorithm.h  dataset.h  layers.h  learning_algorithms.h  tsk.h
models/: hz.model  tictactoe3roles.model  tictactoe3rolesNoise.model  tictactoe6roles.model  weather8role
resource/: animal_species_200_rows.csv  animal_species_500.csv  customer.csv  dermatology.csv  irises.csv  magic-gamma-telescope.csv  new_irises.csv  tic-tac-toc.csv
resource/old/: old-magic-gamma-telescope.csv  old-tic-tac-toc.csv
src/: CMakeLists.txt  csv_reader.cpp  main.cpp  test_customer.cpp  test_diabet.cpp  test_irises.cpp  test_tic-tac-toc.cpp
src/cuda_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_cuda  test_cuda.cpp  test_cuda.cu  test_cuda.h
tests/: CMakeLists.txt  test_noisy.cpp  test_role.cpp
tsk_fuzzy_network/: CMakeLists.txt  api.cpp  dataset.cpp  fuzzy_api.cpp  logger.cpp  tsk.cpp
tsk_fuzzy_network/layers/: fuzzy_layer.cpp  layer.cpp  multiple_layer.cpp  role_multiple_layer.cpp  sum_layer.cpp
tsk_fuzzy_network/learning/: c_means.cpp  hybrid_algorithm.cpp  hybrid_algorithm.cu
